<resources>
    <string name="app_name">SuitmediaApp</string>

    <!--First Screen-->
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="hint_photo">Photo</string>
    <string name="check">Check</string>
    <string name="next">Next</string>

    <!--Second Screen-->
    <string name="back">Back</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="selected_username">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>

    <!--Third Screen-->
    <string name="third_screen">Third Screen</string>
</resources>