<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background"
    android:gravity="center">

    <ImageView
        android:id="@+id/ic_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_photo"
        android:layout_gravity="center"
        android:contentDescription="@string/hint_photo"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/name_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:autofillHints="@string/hint_name"
        android:background="@drawable/rounded_input"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/sentence_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_palindrome"
        android:autofillHints="@string/hint_palindrome"
        android:background="@drawable/rounded_input"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

</LinearLayout>

