<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:contentInsetStart="0dp"
        android:contentInsetEnd="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back"
            android:background="@color/white"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_screen"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="568dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/selected_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_username"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/choose_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_user"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white" />
</RelativeLayout>
